[package]
name = "crypto-utils"
version = "0.1.0"
authors = ["Andrew Johnson <ajohnson.uva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
unicode-normalization = "0.1.8"
secp256k1 = { version = "0.20.2", features = ["rand", "bitcoin_hashes", "recovery"] }
rand = {version = "0.6", features = ["std"]}
ripemd160 = "0.9.1"
ring = "0.16.20"
hex = "0.4.3"
bs58 = "0.4.0"
sha2 = "0.9.3"
serde_json = "1.0.59"
serde = { version = "1.0.125", features = ["derive"]}
hdwallet = "0.3.0"
k256 = {version = "0.8.0", features = ["ecdsa", "keccak256", "ecdsa-core", "sha256"]}
rand_core = {version = "0.6.2", features = ["getrandom"]}
bitcoin = {version = "0.26.0", features = ["secp-recovery", "base64"]}
chrono = "0.4"
base64 = "0.13.0"
url = "2.2.2"
bytes = "1.0.1"
